--- a/clientPrivate/src/app/components/torrent-item/torrent-item.component.html
+++ b/clientPrivate/src/app/components/torrent-item/torrent-item.component.html
@@ -1,4 +1,4 @@
-<div class="itemContainer" appTorrentItemContext>
+<div appTorrentItemContext class="itemContainer" [ngClass]="{ selected: item.selected }" (click)="handleSelect($event)">
   <div class="item">
     <ng-container [ngSwitch]="item.state">
       <mat-icon class="statusIcon" [style]="'color: rgb(var(--color1)'" *ngSwitchCase="'pausedUP'">done</mat-icon>
@@ -18,48 +18,50 @@
       <div class="row">
         <div class="name">
           <div>
-            {{item.name}}
+            {{ item.name }}
           </div>
         </div>
         <div class="speed">
           <div class="download">
             <mat-icon>south</mat-icon>
-            <div [innerHtml]="item.dlspeed|convertUnit:true"></div>
+            <div [innerHtml]="item.dlspeed | convertUnit: true"></div>
           </div>
           <div class="upload">
             <mat-icon>north</mat-icon>
-            <div [innerHtml]="item.upspeed|convertUnit:true"></div>
+            <div [innerHtml]="item.upspeed | convertUnit: true"></div>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="row flexMax" title="Downloaded">
           <mat-icon>south</mat-icon>
-          <div class="text" [innerHtml]="item.downloaded|convertUnit"></div>
+          <div class="text" [innerHtml]="item.downloaded | convertUnit"></div>
         </div>
         <div class="row flexMax margin" title="Remaining">
           <mat-icon>downloading</mat-icon>
-          <div class="text" [innerHtml]="item.amount_left|convertUnit"></div>
+          <div class="text" [innerHtml]="item.amount_left | convertUnit"></div>
         </div>
         <div class="row flexMax margin" title="Size">
           <mat-icon>donut_large</mat-icon>
-          <div class="text" [innerHtml]="item.size|convertUnit"></div>
+          <div class="text" [innerHtml]="item.size | convertUnit"></div>
         </div>
         <div class="row flexMax margin" title="Uploaded">
           <mat-icon>north</mat-icon>
-          <div class="text" [innerHtml]="item.uploaded|convertUnit"></div>
+          <div class="text" [innerHtml]="item.uploaded | convertUnit"></div>
         </div>
         <div class="row flexMax margin" title="Ratio">
           <mat-icon>incomplete_circle</mat-icon>
-          <div class="text">{{item.ratio|number:'1.2-2'}}</div>
+          <div class="text">{{ item.ratio | number: "1.2-2" }}</div>
         </div>
         <div class="row flexMax margin" title="Seed">
           <mat-icon>settings_input_antenna</mat-icon>
-          <div class="text">{{item.num_seeds}} ({{item.num_complete}})</div>
+          <div class="text">{{ item.num_seeds }} ({{ item.num_complete }})</div>
         </div>
         <div class="row flexMax" title="Peer">
           <mat-icon>connect_without_contact</mat-icon>
-          <div class="text">{{item.num_leechs}} ({{item.num_incomplete}})</div>
+          <div class="text">
+            {{ item.num_leechs }} ({{ item.num_incomplete }})
+          </div>
         </div>
       </div>
       <div class="row">
