--- a/clientPrivate/src/app/components/torrent-item/torrent-item.component.scss
+++ b/clientPrivate/src/app/components/torrent-item/torrent-item.component.scss
@@ -10,7 +10,8 @@
     align-items: center;
   }
 
-  &:hover {
+  &:hover,
+  &.selected {
     background-color: rgba($color: #000000, $alpha: 0.2);
 
     .row {
