--- a/clientPrivate/src/app/components/collapse-menu/menu-item/menu-item.component.scss
+++ b/clientPrivate/src/app/components/collapse-menu/menu-item/menu-item.component.scss
@@ -3,12 +3,13 @@
   align-items: center;
   cursor: pointer;
   padding: 10px 10px;
-  border-radius: 4px;
+  border-radius: 8px;
   transition: color 0.25s ease-out;
   // justify-content: space-between;
 
   &.selected {
     color: rgba($color: var(--color1), $alpha: 1);
+    background-color: rgba($color: #000000, $alpha: 0.25);
   }
 
   .textContainer {
